# kyanbasu

./: .gitignore  CHANGELOG.md  Kyanbasu.py  MIGRATION.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  TaskCanvas.py  pyproject.toml
.github/workflows/: ci.yml
kyanbasu/: __init__.py  __main__.py  app.py  cli.py  injectors.py  payload.py  project_selector.py  runtime_html.py  runtime_support.py  task_io.py
kyanbasu/templates/: kyanbasu.base.html
kyanbasu/templates/runtime_assets/: canvas_navigator_v1.css.html  canvas_navigator_v1.js.html  canvas_notes_core_v1.js.html  canvas_notes_v1.js.html  canvas_storage_v1.js.html  canvas_workbenches_v1.css.html  canvas_workbenches_v1.js.html  commands_core_v1.js.html  console_editor_v1.css.html  console_editor_v1.js.html  copy_full_override_v1.js.html  dedupe_focus_v1.js.html  dep_handle_authoritative_v6.js.html  dep_handle_authoritative_v6b.js.html  dependency_edges_v1.js.html  dependency_interactions_v1.js.html  feature_due.css.html  feature_due.js.html  feature_hover.css.html  feature_hover.js.html  injector_actionable_beacon.css.html  injector_command_preflight_v1.js.html  injector_console_merge_v3.js.html  injector_energy_arrows.js.html  injector_follow_edges_on_move_v1.js.html  injector_layout_persist_v1.js.html  injector_new_task_console_sync_v2.js.html  injector_remove_mode_v61.js.txt  injector_runtime_diagnostics_v1.js.html  injector_shortify_render.js.html  injector_staged_line_anim.js.html  injector_wire_deps_as_main.js.html  project_add_tag_v4.css.html  project_add_tag_v4.js.html  project_picker_v2.js.html  quickfix_add_render_v1.js.html  review_changes_v1.js.html  single_console_augment_v1.js.html  toast_util_v1.js.html
scripts/: release_check.sh
taskcanvas/: __init__.py  __main__.py  app.py  cli.py  injectors.py  output.py  payload.py  runtime_html.py  runtime_support.py  task_io.py  task_types.py
taskcanvas/templates/: taskcanvas.base.html
taskcanvas/templates/runtime_assets/: canvas_navigator_v1.js.html  canvas_notes_core_v1.js.html  canvas_notes_v1.css.html  canvas_notes_v1.js.html  canvas_storage_v1.js.html  canvas_workbenches_v1.css.html  canvas_workbenches_v1.js.html  commands_core_v1.js.html  console_editor_v1.css.html  console_editor_v1.js.html  console_line_enforcer_v3.js.html  copy_full_override_v1.js.html  dedupe_focus_v1.css.html  dep_handle_authoritative_v6.js.html  dependency_edges_v1.js.html  dependency_interactions_v1.js.html  feature_due.js.html  feature_hover.css.html  feature_hover.js.html  injector_actionable_beacon.css.html  injector_actionable_beacon.js.html  injector_command_preflight_v1.js.html  injector_console_merge_v3.js.html  injector_energy_arrows.css.html  injector_energy_arrows.js.html  injector_follow_edges_on_move_v1.js.html  injector_hover_stage_observer.js.html  injector_layout_persist_v1.js.html  injector_new_task_console_sync_v2.js.html  injector_remove_mode_v61.js.txt  injector_runtime_diagnostics_v1.js.html  injector_shortify_render.js.html  injector_staged_line_anim.css.html  injector_staged_line_anim.js.html  injector_wire_deps_as_main.js.html  kyanbasu_compat_v1.js.html  project_picker_v2.css.html  quickfix_add_render_v1.js.html  review_changes_v1.css.html  review_changes_v1.js.html
templates/: new_project_modal_v2_minimal.replace.html  taskcanvas.base.html
templates/runtime_assets/: dep_handle_authoritative_v6b.css.html  dep_handle_authoritative_v6b.js.html  feature_due.css.html  feature_hover.css.html  injector_actionable_beacon.js.html  injector_console_hotkey_patch_v4.js.html  injector_follow_edges_on_move_v1.js.html  injector_hover_stage_observer.js.html  injector_layout_persist_v1.js.html  injector_modify_stage_to_console.js.txt  injector_multiline_add.js.html  injector_new_task_console_sync_v2.js.html  injector_runtime_diagnostics_v1.js.html  injector_undo_redo_v1.js.html  injector_wire_deps_as_main.css.html  injector_wire_deps_as_main.js.html
tests/: test_browser_e2e.py  test_cli.py  test_entrypoint.py  test_injectors.py  test_main.py  test_payload.py  test_project_selector.py  test_runtime_html.py  test_runtime_support.py  test_task_io.py  test_task_io_integration.py
