[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyanbasu"
dynamic = ["version"]
description = "Kyanbasu: a local visual planning and thinking workspace for Taskwarrior."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Kyanbasu contributors" }
]
keywords = [
  "taskwarrior",
  "productivity",
  "planning",
  "mind-map",
  "notes",
  "dependencies",
  "canvas",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Console",
  "Topic :: Office/Business :: Scheduling",
]

[project.urls]
Homepage = "https://github.com/catanadj/kyanbasu"
Source = "https://github.com/catanadj/kyanbasu"
Issues = "https://github.com/catanadj/kyanbasu/issues"
Changelog = "https://github.com/catanadj/kyanbasu/blob/main/CHANGELOG.md"

[project.scripts]
kyanbasu = "kyanbasu:main"

[tool.setuptools]
packages = ["kyanbasu"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "kyanbasu.__version__" }

[tool.setuptools.package-data]
kyanbasu = [
  "templates/*.html",
  "templates/runtime_assets/*.html",
  "templates/runtime_assets/*.txt",
]
